# hifiberry-configurator

./: BUILD.md  README.md  build-deb.sh  pyproject.toml  requirements.txt  setup.py
debian/: control  install  rules
docs/: api-documentation.md  architecture.md  asoundconf-command-flow.md  avahi-command-flow.md  bluetooth-command-server-flow.md  cmdline-command-flow.md  command-server-flow.md  config-parser-flow.md  configtxt-command-flow.md  debian-package.md  dsptoolkit-command-flow.md  hattools-command-flow.md  hostconfig-command-flow.md  hostname-utils-flow.md  i2c-flow.md  network-command-flow.md  version-management.md
man/: config-volume.1
src/: configdb.py  dsptoolkit.py  hattools.py  hostconfig.py  i2c.py  sambamount.py  wifi.py
src/configurator/: __init__.py  dsptoolkit.py  hostname_utils.py  sambamount.py  server.py  settings_manager.py  soundcard.py  soundcard_detector.py  systeminfo.py  volume.py  wifi.py
src/configurator/handlers/: ble_handler.py  bluetooth_handler.py  filesystem_handler.py  hostname_handler.py  i2c_handler.py  network_handler.py  player_registry_handler.py  response_utils.py  script_handler.py  smb_handler.py  system_handler.py  volume_handler.py
src/handlers/: ble_handler.py  filesystem_handler.py  hostname_handler.py  smb_handler.py  soundcard_handler.py
tests/: test_asoundconf.py  test_avahi.py  test_ble_handler.py  test_ble_provisioning.py  test_bluetooth.py  test_bluetooth_handler.py  test_cmdline.py  test_config_parser.py  test_configdb.py  test_configtxt.py  test_dsptoolkit.py  test_filesystem_handler.py  test_hattools.py  test_hostconfig.py  test_hostname_handler.py  test_i2c_handler.py  test_player_registry_handler.py  test_player_registry_listing.py  test_player_settings_write.py  test_script_handler.py  test_smb_handler.py  test_soundcard.py  test_soundcard_arecord.py  test_soundcard_handler.py  test_system_handler.py  test_systemd_handler.py  test_systeminfo.py  test_volume.py  test_volume_handler.py  test_wifi.py
